--- a/index.html
+++ b/index.html
@@ -9,5 +9,37 @@
 </head>
 <body>
     
+    <header>
+
+    </header>
+
+    <main>
+        <section class="form_section">
+            <form action="#">
+                <div class="input_group">
+                    <label for="">
+                        First Name *
+                    </label>
+                    <input type="text">
+
+                    <label for="">
+                        First Name *
+                    </label>
+                    <input type="text">
+
+                    <label for="">
+                        First Name *
+                    </label>
+                    <input type="text">
+                    
+                </div>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
